--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cosmos-show",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://weber.itn.liu.se/~lovha71/cosmos-show",
+  "homepage": "http://weber.itn.liu.se/~lovha71/openspace/cosmos-show",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
